--- a/ygfly.yaml
+++ b/ygfly.yaml
@@ -1,14 +1,11 @@
-# HTTP 代理端口
-port: 7890 
-
-# SOCKS5 代理端口
-socks-port: 7891 
+# HTTP&SOCKS5 代理端口
+mixed-port: 7890 
 
 # Linux 和 macOS 的 redir 代理端口
 redir-port: 7892 
 
 # 允许局域网的连接
-allow-lan: true
+allow-lan: false
 
 # 规则模式：Rule（规则） / Global（全局代理）/ Direct（全局直连）
 mode: Rule
@@ -17,7 +14,7 @@ mode: Rule
 # 5 个级别：silent / info / warning / error / debug。级别越高日志输出量越大，越倾向于调试，若需要请自行开启。
 log-level: silent
 # Clash 的 RESTful API
-external-controller: '0.0.0.0:9090'
+external-controller: '127.0.0.1:9090'
 
 # RESTful API 的口令
 secret: '' 
